2021-06-15 Alan Grossfield <alan>
	* Merged in stacking branch, new tools for nucleic acid base stacking

2021-05-31 Alan Grossfield <alan>
	* Merged in python-options branch, preliminary tools for uniform command
	  line arguments in python
	* New tool: all_contacts.py, like rmsds but in contact space

2021-05-10 Tod Romo <tromo>
	* More fixes to gmxdump2pdb.pl to deal with updates to gmx dump,
	  fixed error where some constraints were mixed

2021-05-06 Alan Grossfield <alan>
	* added new method to AtomicGroup to orient the group along a supplied axis

2021-05-05 Alan Grossfield <alan>
	* fixed bug in reading TinkerArc files with periodic boxes

2021-04-08 Alan Grossfield <alan>
    * add frameBoundaries to VirtualTrajectory

2021-04-02 Alan Grossfield <alan>
	* Merged scattering tool

2021-01-21  Release version 3.3
2021-01-18  Alan Grossfield <alan>
	* Merged in ocf tool

2021-01-05  Alan Grossfield <alan>
	*  Merged dipole computation into membrane_map

2021-01-03  Alan Grossfield <alan>
	* Merged in new Weights class from Louis Smith

2020-11-24  Alan Grossfield/Ashlin James Poruthoor
    * Merged in logistic and hard contact methods for AtomicGroups

2020-10-19  Alan Grossfield <alan>
	* Merge branch fixing incorrect bonds in add_molecule.py

2020-10-05  Alan Grossfield <alan>
	* Fixed bug in gmxdump2pdb, where box units were nm instead of Ang

2020-10-02  Alan Grossfield <alan>
	* Merged in clean-up version of Louis Smith's cluster
	  analysis tool, frame-picker.py
	* Merged in my tool cluster_pops.py

2020-08-27  Alan Grossfield <alan>
	* Fixed bug in system building with non-3-site water models

2020-08-26  Alan Grossfield <alan>
	* Fixed units error in reading charges from Amber prmtop files

2020-08-13  Alan Grossfield <alan>
	* We can read (rectangular) box dimensions from Amber prmtop files
	* OMG and solvate can handle 4 and 5 site water models

2020-08-08  Alan Grossfield <alan>
	* Merged conda-install branch into main: this will be LOOS 3.2